--- a/style.css
+++ b/style.css
@@ -54,3 +54,8 @@ section {
     justify-content: center ;
     align-items: center ;
 }
+
+form h3 {
+  display: inline ;
+  margin-right: 10px ;
+}
