--- a/style.css
+++ b/style.css
@@ -1,6 +1,13 @@
+h4 {
+    margin-left: 15px ;
+    border: solid ;
+    border-color: navy ;
+}
+
 div {
     border: solid ;
-    border-color: blue ;
+    border-color: rgb(192, 5, 5) ;
+    border-width: 3px ;
 }
 
 #highscores {
@@ -38,7 +45,7 @@ section {
     justify-content: center ;
 }
 
-#questionBox {
+#quizBox {
     height: 500px ;
     width: 800px ;
     display: flex ;
@@ -47,12 +54,20 @@ section {
     flex-direction: column ;
 }
 
-#question {
+#questionBox {
     height: 100px ;
     width: 650px ;
     display: flex ;
     justify-content: center ;
     align-items: center ;
+}
+
+#optionBox {
+    margin-top: 35px ;
+    width: 700px ;
+    display: flex ;
+    flex-direction: column ;
+    align-items: flex-start ;
 }
 
 .form {
