--- a/style.css
+++ b/style.css
@@ -21,9 +21,10 @@ div {
 .startQuiz {
     display: flex ;
     justify-content: center ;
-    height: 75px ;
-    width: 200px ;
+    /* height: 75px ; */
+    /* width: 200px ; */
     align-items: center ;
+    flex-direction: column ;
 }
 
 
