--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ section {
 }
 
 #quizBox {
-    height: 500px ;
+    /* height: 500px ; */
     width: 800px ;
     display: flex ;
     align-items: center ;
@@ -66,10 +66,12 @@ section {
 
 #optionBox {
     margin-top: 35px ;
+    margin-bottom: 35px ;
     width: 700px ;
     display: flex ;
     flex-direction: column ;
     align-items: flex-start ;
+
 }
 
 .form {
@@ -94,4 +96,8 @@ section {
 #optionBox h4:hover {
     box-shadow: inset 0px 0px 8px 
     navy, 0 0 15px navy ;
+}
+
+#optionBox h4 {
+    padding: 10px ;
 }
